--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,3 +1,3 @@
 <% @coupons.each do |coupon| %>
-<div><%= link_to coupon.pretty, coupon_path(coupon)%></div>
+<div><%= link_to coupon.coupon_code, coupon_path(coupon)%> | <%= coupon.store %></div>
     <% end %>
