--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -6,5 +6,7 @@
 <label>Enter the Coupon Code:</label><br>
 <%= text_field_tag :'coupon[coupon_code]' %><br>
 
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
 <%= submit_tag "Submit Coupon" %>
 <% end %>
